shipping-service.yaml
# versi API yg digunakan
apiVersion: apps/v1
# Jenis objek Kubernetes
kind: Deployment
# Metadata untuk Deployment
metadata:
  # Nama Deployment
  name: shipping-deployment
  # Label Deployment
  labels:
    app: ecommerce
    type: shipping
# Spesifikasi untuk Deployment
spec:
  # Jumlah replika Pod yg akan dibuat
  replicas: 1
  # Selektor untuk memilih Pod
  selector:
    # Pod yg dipilih harus memiliki label sesuai ketentuan
    matchLabels:
      type: shipping
  # Template untuk membuat Pod
  template:
    # Metadata untuk Pod
    metadata:
      # Label pod
      labels:
        app: ecommerce
        type: shipping
    # Spesifikasi untuk Pod
    spec:
      # Konfigurasi container dalam Pod
      containers:
          # Nama container
        - name: shipping-service
          # Nama image yg digunakan untuk membuat container (dari github package)
          image: ghcr.io/tjatur-k/shipping-service
          # Mekanisme pull image (image di pull setiap kali pod dimulai)
          imagePullPolicy: Always
          # Port yg digunakan
          ports:
          # Port yg digunakan untuk mengakses container
          - containerPort: 3001
          # Environment variabel yg dibutuhkan oleh aplikasi
---
# Versi API yg digunakan
apiVersion: v1
# Jenis objek Kubernetes (Service)
kind: Service
# Metadata untuk Service
metadata:
  # Nama Service
  name: shipping-service
  # Label Service
  labels:
    app: ecommerce
# Spesifikasi untuk Service
spec:
  # Selektor untuk memilih Pod yg akan dilayani oleh Service
  selector:
    type: shipping
  # Port yg dibuka pada Service
  ports:
  - port: 3001
  # Tipe Service yg akan dibuat
  type: NodePort
